--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import './variables.scss';
+@import './mixins.scss';
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import './components/atoms/Button/button.scss';
+@import './components/atoms/Input/input.scss';
+@import './components/atoms/Logo/logo.scss';
+
+@import './components/molecules/Nav/nav.scss';
+@import './components/molecules/Search/search.scss';
+
+@import './components/templates/Header/header.scss';
+
+html,
+body,
+#root {
+  box-sizing: border-box;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
