--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,10 @@
+$colorBlack: #000000;
+$colorBlackBtn: #0d0d19;
 $colorWhite: #ffffff;
+$colorGreyLight: #f2f2f2;
 $colorGrey: #cececf;
+$colorGreyDark: #d8d8d8;
+$colorGreyDarker: #50505e;
+$colorText: #494957;
+$colorTextLight: #878790;
+$colorBtnText: #545460;
